SERVER-36892 Call waitForMovePrimaryCriticalSectionSignal() in onDbVersionMismatch() so that mongos doesn't exhaust its StaleDatabaseVersion retries during an active movePrimary